# bin-boy

./: .gitignore  .gitmodules  Dockerfile.laptop  README.md  build_laptop_image.sh  run_jetson.sh  run_laptop_container.sh
csi_camera_cpp/: CMakeLists.txt  package.xml
csi_camera_cpp/include/csi_camera_cpp/: csi_camera_node.hpp  image_viewer_node.hpp  person_detector_node.hpp
csi_camera_cpp/launch/: csi_camera_ipc.launch.py
csi_camera_cpp/src/: csi_camera_node.cpp  image_viewer_node.cpp  person_detector_node.cpp
csi_camera_ros2/: package.xml  setup.cfg  setup.py
csi_camera_ros2/csi_camera_ros2/: csi_camera_node.py  image_viewer_node.py
csi_camera_ros2/launch/: csi_camera_with_viewer.launch.py
esp32_motor_controller/: esp32_motor_controller.ino  platform.ini
motor_controller/: package.xml  setup.py
motor_controller/motor_controller/: esp32_serial_controller.py  qt_joystick_gui.py  twist_to_esp32_serial.py
