<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csi_camera_cpp</name>
  <version>0.0.0</version>
  <description>C++ ROS2 package to publish CSI camera stream using GStreamer on Jetson Nano</description>
  <maintainer email="marcus.j.hsieh@gmail.com">mj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>opencv-dev</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
